force-app/main/default/objects/Record_Cleanup__mdt/Record_Cleanup__mdt.object-meta.xml
<CustomObject>
    <description
	>Custom Metadata object that will be leveraged in scheduled job to delete old records from specific SObjects.</description>
    <label>Record Cleanup</label>
    <pluralLabel>Record Cleanup</pluralLabel>
</CustomObject>