force-app/main/default/objects/Record_Cleanup__mdt/fields/Archive_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Archive_Conditions__c</fullName>
    <label>Archive Conditions</label>
    <type>TextArea</type>
</CustomField>