force-app/main/default/objects/Record_Cleanup__mdt/fields/Delete_After_X_Days__c.field-meta.xml
<CustomField>
    <fullName>Delete_After_X_Days__c</fullName>
    <description
	>A whole number to be mentioned that will be used to delete the SObject records after X number of days.</description>
    <inlineHelpText
	>A whole number to be mentioned that will be used to delete the SObject records after X number of days.</inlineHelpText>
    <label>Delete After X Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>