force-app/main/default/objects/Record_Cleanup__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>Name of the SObject record that needs to be used for record cleanup.</description>
    <inlineHelpText>Name of the SObject record that needs to be used for record cleanup.</inlineHelpText>
    <label>SObject Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>